--- a/templates/view_project.html
+++ b/templates/view_project.html
@@ -3,7 +3,7 @@
 <div class="fn fl-ns w-50-ns">
   <h2 class="mb0 mt0">{{ project.metadata.title }}</h2>
   <h2 class="f6 fw4 mt2 mb3 black-60">
-    {{ project.metadata.date }} [ <a href="{{ project.link }}" class="fab fa-github link light-purple"></a> ]
+    {{ project.metadata.date }} {% if 'link' in project.metadata %}[ <a href="{{ project.link }}" class="fab fa-github link light-purple"></a> ]{% endif %}
   </h2>
   {{ project.body|safe }}
 </div>
