--- a/templates/base.html
+++ b/templates/base.html
@@ -13,14 +13,14 @@
 <body class="w-100 sans-serif bg-white">
   <main>
     <article class="cf ph3 ph5-ns pv3 pv5-ns">
-    	<header class="fn fl-ns w-50-ns pr4-ns mb4 mb0-ns">
+    	<header class="fn fl-ns w-30-ns pr4-ns mb4 mb0-ns">
         <h2 class="mb3 mt0 lh-title">
           <a href="/" class="light-purple link">utf9k</a>
         </h2>
-        <dl class="f6 lh-title mv2">
+        <dl class="lh-title mv2">
           <a href="/projects" class="dib ml0 gray link">Projects</a>
         </dl>
-        <dl class="f6 lh-title mv2">
+        <dl class="lh-title mv2">
           <a href="/blog" class="dib ml0 gray link">Blog</a>
         </dl>
       </header>
@@ -28,6 +28,6 @@
     </article>
   </main>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Ubuntu|Ubuntu+Mono" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Ubuntu+Mono" rel="stylesheet">
 </body>
 </html>
