--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="mt0 fn fl-ns w-50-ns">
+<div class="mt0 fn fl-ns w-60-ns">
   <h2 class="mt0 lh-title">Welcome!</h2>
-  <p class="f5 lh-copy measure mt0-ns">
+  <p class="measure mt0-ns">
     I'm Marcus Crane, a <a href="https://en.wikipedia.org/wiki/Site_Reliability_Engineering" target="_blank" rel="noreferrer" class="blue link">Site Reliability Engineer</a> at <a href="https://www.xero.com/nz/"  target="_blank" rel="noreferrer" class="blue link">Xero</a> in <a href="https://en.wikipedia.org/wiki/Auckland" target="_blank" rel="noreferrer" class="blue link">Auckland, New Zealand.</a>
   </p>
-  <p class="f5 lh-copy measure mt0-ns">
+  <p class="measure mt0-ns">
     This site acts as a portfolio but more importantly, it's my own little playground on the web!
   </p>
-  <p class="f5 lh-copy measure mt0-ns">
+  <p class="measure mt0-ns">
     You can view the source for this site right <a href="https://github.com/marcus-crane/utf9k" target="_blank" rel="noreferrer" class="blue link">here.</a>
   </p>
-  <p class="f5 lh-copy measure mt0-ns">
+  <p class="measure mt0-ns">
     You can find me around the web in a bunch of places:
   </p>
   <div>
