--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     You can view the source for this site right <a href="https://github.com/marcus-crane/utf9k" target="_blank" rel="noreferrer" class="blue link">here.</a>
   </p>
   <p class="measure mt0-ns">
-    You can find me around the web in a bunch of places:
+    I'm around the web in a bunch of places:
   </p>
   <div>
     <a class="f6 link dim ph3 pv2 mb2 dib ba b--light-purple light-purple br2" target="_blank" rel="noreferrer" href="https://github.com/marcus-crane">
@@ -34,3 +34,4 @@
   </div>
 </div>
 {% endblock %}
+{% block last_deploy %}{{ last_deployed }}{% endblock %}
