--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,6 +19,10 @@ main {
     font-size: 0.65rem;
 }
 
+.footer span {
+    border-bottom: 1px dotted grey;
+}
+
 .item {
     margin: -10px;
     padding: 10px 0 5px 10px;
@@ -29,7 +33,6 @@ main {
 }
 
 p {
-    font-family: 'Open Sans', sans-serif;
     font-size: 18px;
     line-height: 1.5;
     overflow-wrap: break-word;
