Footer is now able to fetch the latest site commit which is neat

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,19 +31,17 @@
   </main>
   <div class="footer">
     <center>
-      <p class="dib gray pt2 pb1">Last update was {% block last_deploy %}{% endblock %}
+      <p class="dib gray pt2 pb1">
+        <span class="lastcommit">Last update</span>
+         was {% block last_deploy %}{% endblock %}
         <span class="nztdef" title="New Zealand Time">NZT</span>
       </p>
     </center>
   </div>
+  <div id="template"">Fetching latest commit...</div>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet" />
   <script src="https://unpkg.com/tippy.js@2.5.4/dist/tippy.all.min.js"></script>
-  <script type="text/javascript">
-    tippy('.nztdef', {
-      'animation': 'fade',
-      'arrow': true
-    })
-  </script>
+  <script src="{{ url_for('static', filename='js/tooltips.js') }}"></script>
 </body>
 </html>
