--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,6 +23,10 @@ main {
     border-bottom: 1px dotted grey;
 }
 
+#template {
+    display: none;
+}
+
 .item {
     margin: -10px;
     padding: 10px 0 5px 10px;
