Added stats page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -36,6 +36,14 @@ main {
     padding: 1px 0 5px 10px;
 }
 
+.game {
+    max-height: 475px;
+}
+
+.stats-block {
+    width: 100%
+}
+
 p {
     font-size: 18px;
     line-height: 1.5;
