--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,9 @@
         <dl class="lh-title mv2">
           <a href="/blog" class="dib ml0 gray link">Blog</a>
         </dl>
+        <dl class="lh-title mv2">
+          <a href="/stats" class="dib ml0 gray link">Stats</a>
+        </dl>
       </header>
       {% block content %}{% endblock %}
     </article>
