Fixed margin bug on stats page

--- a/templates/view_stats.html
+++ b/templates/view_stats.html
@@ -22,7 +22,7 @@
   {% endif %}
   </div>
   <h3 class="mt3 mb2 lh-title">Music</h3>
-  <div class="dib stats-block ml3 ml0-ns nowrap overflow-x-auto">
+  <div class="dib stats-block ml0-ns nowrap overflow-x-auto">
     {% if tracks %}
       {% for track in tracks %}
         <div class="dib">
