--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,14 @@
   <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}" />
   <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css" />
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-121987285-3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-121987285-3');
+</script>
   {% endblock %}
 </head>
 <body class="w-100 sans-serif bg-white">
