--- a/themes/utf9k/templates/category.html
+++ b/themes/utf9k/templates/category.html
@@ -1,16 +1,16 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="mt0 fn fl-ns w-60-ns">
-  <h2 class="pb3 mt0 lh-title">Blog</h2>
+  <h2 class="pb3 mt0 lh-title">{{ category }} </h2>
   <div class="content ml3 ml0-ns">
-    {% for item in posts %}
+    {% for article in articles_page.object_list %}
       <div class="item">
         <dl class="lh-title mv2">
-          <a href="{{ item.path }}" class="f4 dib black link">{{ item.title }}</a>
+          <a href="{{ article.url }}" class="f4 dib black link">{{ article.title }}</a>
         </dl>
         <dl class="lh-title mv2">
           <dd class="dib ml0 gray">
-            {{ item.date }}
+            {{ article.locale_date }}
           </dd>
         </dl>
       </div>
@@ -18,4 +18,3 @@
   </div>
 </div>
 {% endblock %}
-{% block last_deploy %}{{ last_deployed }}{% endblock %}
