Fixed static files

--- a/themes/utf9k/templates/base.html
+++ b/themes/utf9k/templates/base.html
@@ -9,7 +9,7 @@
   <meta name="theme-color" content="#a463f2" />
   <link rel="manifest" href="/manifest.json" />
   <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css" />
-  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="{{ THEME_STATIC_DIR}}/{{ CSS_FILE }}" />
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-121987285-3"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -41,7 +41,7 @@
     <center>
       <p class="dib gray pt2 pb1">
         <span class="lastcommit">Last update</span>
-         was (time goes here)
+         was some time ago
         <span class="nztdef" title="New Zealand Time">NZT</span>
       </p>
     </center>
