--- a/themes/utf9k/templates/page.html
+++ b/themes/utf9k/templates/page.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="mt0 fn fl-ns w-60-ns">
-  <h2 class="mb0 mt0">{{ page.title }}</h2>
+<h2 class="pb-3">{{ page.title }}</h2>
+<div id="content">
   {{ page.content }}
 </div>
 {% endblock %}
