--- a/themes/utf9k/templates/article.html
+++ b/themes/utf9k/templates/article.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="fn fl-ns w-50-ns">
-  <h2 class="mb0 mt0">{{ article.title }}</h2>
-  <h2 class="f6 fw4 mt2 mb3 black-60">{{ article.date | strftime('%d %B %Y') }}</h2>
+<h2>{{ article.title }}</h2>
+<h3 class="pb-3 font-light text-base">{{ article.date | strftime('%d %B %Y') }}</h3>
+<div id="content">
   {{ article.content }}
 </div>
 {% endblock %}
