--- a/themes/utf9k/templates/category.html
+++ b/themes/utf9k/templates/category.html
@@ -1,23 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="mt0 fn fl-ns w-60-ns">
-  <h2 class="pb3 mt0 lh-title">{{ category }} </h2>
-  <div class="content ml3 ml0-ns">
-    {% for article in articles_page.object_list %}
-      <div class="item">
-        <dl class="lh-title mv2">
-          <a href="{{ article.url }}" class="f4 dib black link">{{ article.title }}</a>
-        </dl>
-        <dl class="lh-title mv2">
-          <dd class="dib ml0 gray">
-            {{ article.date | strftime('%d %B %Y') }}
-          </dd>
-        </dl>
-      </div>
-    {% endfor %}
-    {% if articles_page.has_other_pages() %}
-      {% include 'pagination.html' %}
-    {% endif %}
-  </div>
-</div>
+<h2>{{ category }} </h2>
+<ul class="list-reset mb-8 pt-6">
+  {% for article in articles_page.object_list %}
+    <li>
+      <a href="{{ article.url }}" class="f4 dib black link">{{ article.title }}</a>
+      <p class="pb-3 font-light text-base">{{ article.date | strftime('%d %B %Y') }}</p>
+    </li>
+  {% endfor %}
+</ul>
+{% if articles_page.has_other_pages() %}
+  {% include 'pagination.html' %}
+{% endif %}
 {% endblock %}
