--- a/themes/utf9k/templates/index.html
+++ b/themes/utf9k/templates/index.html
@@ -11,16 +11,16 @@
 <p class="text-lg mb-3">I'm around the web in a bunch of places:</p>
 
 <a class="no-underline" target="_blank" rel="noreferrer" href="https://github.com/marcus-crane">
-    <button class="bg-grey-light hover:bg-grey text-grey-darkest font-bold py-2 px-4 rounded">Github</button>
+    <button class="bg-grey-light hover:bg-grey text-grey-darkest font-bold py-2 px-4 rounded mb-1">Github</button>
 </a>
 <a class="no-underline" target="_blank" rel="noreferrer" href="https://instagram.com/sentryism">
-    <button class="bg-grey-light hover:bg-grey text-grey-darkest font-bold py-2 px-4 rounded">Instagram</button>
+    <button class="bg-grey-light hover:bg-grey text-grey-darkest font-bold py-2 px-4 rounded mb-1">Instagram</button>
 </a>
 <a class="no-underline" target="_blank" rel="noreferrer" href="https://linkedin.com/in/marcus-crane">
-    <button class="bg-grey-light hover:bg-grey text-grey-darkest font-bold py-2 px-4 rounded">Linkedin</button>
+    <button class="bg-grey-light hover:bg-grey text-grey-darkest font-bold py-2 px-4 rounded mb-1">Linkedin</button>
 </a>
 <a class="no-underline" target="_blank" rel="noreferrer" href="https://twitter.com/sentreh">
-    <button class="bg-grey-light hover:bg-grey text-grey-darkest font-bold py-2 px-4 rounded">Twitter</button>
+    <button class="bg-grey-light hover:bg-grey text-grey-darkest font-bold py-2 px-4 rounded mb-1">Twitter</button>
 </a>
 {% endblock %}
 {% block last_deploy %}{{ last_deployed }}{% endblock %}
