--- a/layouts/tags/list.html
+++ b/layouts/tags/list.html
@@ -2,7 +2,7 @@
   <h2>{{ .Title }}</h2>
   <ul class="list-reset mb-8 pt-6">
     {{ range (.Paginator 50).Pages }}
-    <a class="no-underline" target="_blank" rel="noreferrer" href="{{ .URL }}">
+    <a class="no-underline" rel="noreferrer" href="{{ .URL }}">
       <button class="bg-grey-light hover:bg-grey text-grey-darkest font-bold py-2 px-4 rounded inline-flex items-center mb-1">
         <span>{{ .Title }}</span>
       </button>
