--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
   <h2>{{ .Title }}</h2>
-  <ul class="list-reset mb-8 pt-6">
+  <ul class="list-reset mb-4 pt-6">
     {{ range .Paginator.Pages }}
       <li>
         <a href="{{ .URL }}" class="f4 dib black link">{{ .Title }}</a>
@@ -8,5 +8,5 @@
       <li>
     {{ end }}
   </ul>
-  {{- template "_internal/pagination.html" . -}}
+  {{ partial "pagination.html" . }}
 {{ end }}
