--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,7 +11,7 @@
   <p class="text-lg mb-3">I'm around the web in a bunch of places:</p>
 
   {{ range $site, $url := $.Site.Data.social }}
-    <a href="no-underline" target="_blank" rel="noreferrer" href="{{ $url }}">
+    <a class="no-underline" target="_blank" rel="noreferrer" href="{{ $url }}">
       <button class="bg-grey-light hover:bg-grey text-grey-darkest font-bold py-2 px-4 rounded mb-1">{{ $site }}</button>
     </a>
   {{ end }}
