Did a few things:
    * Removed unused monokai CSS
    * Added styling to singular <code> elements
    * Removed line ending support and added padding + hopefully proper
    scroll support for code blocks
    * Added some spacing for the bottom of reviews and moved metadata
    block so it renders within the #content div

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,6 +16,10 @@ a:hover {
   padding-bottom: 1rem;
 }
 
+#content {
+  padding-bottom: 1rem;
+}
+
 textarea {
   min-height: 250px;
 }
@@ -46,7 +50,26 @@ td {
 }
 
 /* Code styles */
+#content > p > code {
+    background-color: #DAEAF8;
+    border-radius: 4px;
+    color: #3490dc;
+    font-size: 90%;
+    padding: 2px 4px;
+    white-space: pre;
+}
+
 .highlight {
     padding-bottom: 1rem;
 }
 
+.highlight pre {
+    background-color: #3f3f3f;
+    border: 0;
+    border-radius: 4px;
+    display: block;
+    font-size: 15px;
+    margin: 0 0 12px;
+    overflow-x: auto;
+    padding: 1em;
+}
