--- a/layouts/reviews/single.html
+++ b/layouts/reviews/single.html
@@ -1,14 +1,19 @@
 {{ define "main" }}
   <h2>{{ .Title }}</h2>
   <h3 class="pb-3 font-light text-base">{{ dateFormat "Jan 2, 2006" .Date }}</h3>
-  <div id="content">{{ .Content }}</div>
-  <p>Developer: {{ .Params.Developer }}</p>
-  <p>Publisher: {{ .Params.Publisher }}</p>
-  <p>Released in {{ .Params.Released }}</p>
-  <p>Platforms: </p>
-  <ul>
-  {{ range .Params.Platforms }}
-    <li>{{ . }}</li>
-  {{ end }}
-  </ul>
+  <div id="content">
+    {{ .Content }}
+    Developer: {{ .Params.Developer }}
+    <br />
+    Publisher: {{ .Params.Publisher }}
+    <br />
+    Released in {{ .Params.Released }}
+    <br />
+    Platforms: 
+    <ul>
+    {{ range .Params.Platforms }}
+      <li>{{ . }}</li>
+    {{ end }}
+    </ul>
+  </div>
 {{ end }}
