--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,7 +24,7 @@ textarea {
   min-height: 250px;
 }
 
-/* Table styles (should be made into a plugin later) */
+/* Table styles */
 
 table {
     width: 100%;
@@ -50,6 +50,7 @@ td {
 }
 
 /* Code styles */
+
 #content > p > code {
     background-color: #DAEAF8;
     border-radius: 4px;
@@ -73,3 +74,82 @@ td {
     overflow-x: auto;
     padding: 1em;
 }
+
+/*
+
+    The theme used for code blocks
+
+    Name:       Base16 Oceanic Next Dark
+    Author:     Dmitri Voronianski (http://pixelhunter.me)
+
+    Pygments template by Jan T. Sott (https://github.com/idleberg)
+    Created with Base16 Builder by Chris Kempson (https://github.com/chriskempson/base16-builder)
+    Slightly modified to work with Hugo/Chroma by myself (I changed .syntax to .chroma, wow)
+
+*/
+
+.chroma .hll { background-color: #4F5B66 }
+.chroma  { background: #1B2B34; color: #D8DEE9 }
+.chroma .c { color: #65737E } /* Comment */
+.chroma .err { color: #EC5f67 } /* Error */
+.chroma .k { color: #C594C5 } /* Keyword */
+.chroma .l { color: #F99157 } /* Literal */
+.chroma .n { color: #D8DEE9 } /* Name */
+.chroma .o { color: #5FB3B3 } /* Operator */
+.chroma .p { color: #D8DEE9 } /* Punctuation */
+.chroma .cm { color: #65737E } /* Comment.Multiline */
+.chroma .cp { color: #65737E } /* Comment.Preproc */
+.chroma .c1 { color: #65737E } /* Comment.Single */
+.chroma .cs { color: #65737E } /* Comment.Special */
+.chroma .gd { color: #EC5f67 } /* Generic.Deleted */
+.chroma .ge { font-style: italic } /* Generic.Emph */
+.chroma .gh { color: #D8DEE9; font-weight: bold } /* Generic.Heading */
+.chroma .gi { color: #99C794 } /* Generic.Inserted */
+.chroma .gp { color: #65737E; font-weight: bold } /* Generic.Prompt */
+.chroma .gs { font-weight: bold } /* Generic.Strong */
+.chroma .gu { color: #5FB3B3; font-weight: bold } /* Generic.Subheading */
+.chroma .kc { color: #C594C5 } /* Keyword.Constant */
+.chroma .kd { color: #C594C5 } /* Keyword.Declaration */
+.chroma .kn { color: #5FB3B3 } /* Keyword.Namespace */
+.chroma .kp { color: #C594C5 } /* Keyword.Pseudo */
+.chroma .kr { color: #C594C5 } /* Keyword.Reserved */
+.chroma .kt { color: #FAC863 } /* Keyword.Type */
+.chroma .ld { color: #99C794 } /* Literal.Date */
+.chroma .m { color: #F99157 } /* Literal.Number */
+.chroma .s { color: #99C794 } /* Literal.String */
+.chroma .na { color: #6699CC } /* Name.Attribute */
+.chroma .nb { color: #D8DEE9 } /* Name.Builtin */
+.chroma .nc { color: #FAC863 } /* Name.Class */
+.chroma .no { color: #EC5f67 } /* Name.Constant */
+.chroma .nd { color: #5FB3B3 } /* Name.Decorator */
+.chroma .ni { color: #D8DEE9 } /* Name.Entity */
+.chroma .ne { color: #EC5f67 } /* Name.Exception */
+.chroma .nf { color: #6699CC } /* Name.Function */
+.chroma .nl { color: #D8DEE9 } /* Name.Label */
+.chroma .nn { color: #FAC863 } /* Name.Namespace */
+.chroma .nx { color: #6699CC } /* Name.Other */
+.chroma .py { color: #D8DEE9 } /* Name.Property */
+.chroma .nt { color: #5FB3B3 } /* Name.Tag */
+.chroma .nv { color: #EC5f67 } /* Name.Variable */
+.chroma .ow { color: #5FB3B3 } /* Operator.Word */
+.chroma .w { color: #D8DEE9 } /* Text.Whitespace */
+.chroma .mf { color: #F99157 } /* Literal.Number.Float */
+.chroma .mh { color: #F99157 } /* Literal.Number.Hex */
+.chroma .mi { color: #F99157 } /* Literal.Number.Integer */
+.chroma .mo { color: #F99157 } /* Literal.Number.Oct */
+.chroma .sb { color: #99C794 } /* Literal.String.Backtick */
+.chroma .sc { color: #D8DEE9 } /* Literal.String.Char */
+.chroma .sd { color: #65737E } /* Literal.String.Doc */
+.chroma .s2 { color: #99C794 } /* Literal.String.Double */
+.chroma .se { color: #F99157 } /* Literal.String.Escape */
+.chroma .sh { color: #99C794 } /* Literal.String.Heredoc */
+.chroma .si { color: #F99157 } /* Literal.String.Interpol */
+.chroma .sx { color: #99C794 } /* Literal.String.Other */
+.chroma .sr { color: #99C794 } /* Literal.String.Regex */
+.chroma .s1 { color: #99C794 } /* Literal.String.Single */
+.chroma .ss { color: #99C794 } /* Literal.String.Symbol */
+.chroma .bp { color: #D8DEE9 } /* Name.Builtin.Pseudo */
+.chroma .vc { color: #EC5f67 } /* Name.Variable.Class */
+.chroma .vg { color: #EC5f67 } /* Name.Variable.Global */
+.chroma .vi { color: #EC5f67 } /* Name.Variable.Instance */
+.chroma .il { color: #F99157 } /* Literal.Number.Integer.Long */
