--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ $.Site.LanguageCode | default "en" }}">
+<html class="h-full" lang="{{ $.Site.LanguageCode | default "en" }}">
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -25,20 +25,24 @@
     {{- template "_internal/schema.html" . -}}
     {{- template "_internal/twitter_cards.html" . -}}
   </head>
-  <body>
-    <div class="p-2 pt-12 font-sans leading-normal">
-      <div class="px-2">
-        <div class="sm:flex -mx-2 h-12">
-          <div class="w-1/5 px-12">
-            <a href="/" class="text-purple text-2xl font-bold">
+  <body class="h-full font-sans leading-normal">
+    <div class="h-full flex flex-col bg-grey-lighter">
+      <div class="flex flex-col md:flex-row flex-grow bg-grey-light">
+          <div class="flex-none flex-col bg-red-lighter w-100 md:w-1/4 pt-12 pl-12">
+            <a href="/" class="flex text-purple text-2xl font-bold pb-6">
               {{ .Site.Title }}
             </a>
             {{ partial "sidebar.html" . }}
           </div>
-          <div class="w-100 xl:w-1/2 md:w-3/5 sm:w-4/5 px-12">
+          <div class="bg-blue-lighter w-100 md:w-4/5 pt-12 pl-12 p-8 text-xl">
             {{ block "main" . }}{{ end }}
           </div>
-        </div>
+          <div class="flex-none bg-yellow-lighter w-100 md:w-1/4">
+            <p>Hi there</p>
+          </div>
+      </div>
+      <div class="bg-purple-lighter">
+        <p>I'm a footer</p>
       </div>
     </div>
   </body>
