--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -25,25 +25,20 @@
     {{- template "_internal/schema.html" . -}}
     {{- template "_internal/twitter_cards.html" . -}}
   </head>
-  <body class="h-full font-sans leading-normal">
-    <div class="h-full flex flex-col bg-grey-lighter">
-      <div class="flex flex-col md:flex-row flex-grow bg-grey-light">
-          <div class="flex-none flex-col bg-red-lighter w-100 md:w-1/4 pt-12 pl-12">
+  <body class="h-full w-full font-sans leading-normal">
+    <div class="min-h-full w-full flex flex-col">
+      <div class="flex flex-col md:flex-row flex-grow">
+          <div class="flex-none flex-col w-100 md:w-1/5 pt-12 pl-12">
             <a href="/" class="flex text-purple text-2xl font-bold pb-6">
               {{ .Site.Title }}
             </a>
             {{ partial "sidebar.html" . }}
           </div>
-          <div class="bg-blue-lighter w-100 md:w-4/5 pt-12 pl-12 p-8 text-xl">
+          <div class="h-full w-100 md:w-1/2 pt-12 pl-12 p-8 pb-2 text-xl">
             {{ block "main" . }}{{ end }}
           </div>
-          <div class="flex-none bg-yellow-lighter w-100 md:w-1/4">
-            <p>Hi there</p>
-          </div>
       </div>
-      <div class="bg-purple-lighter">
-        <p>I'm a footer</p>
-      </div>
+      {{ partial "footer.html" . }}
     </div>
   </body>
 </html>
